# synch

./: .dockerignore  .env.example  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  Makefile  README-zh.md  README.md  README.rst  config.ini  config.json  conftest.py  docker-compose-kafka.yml  docker-compose.yml  manage.py  mysql2ch.ini  pyproject.toml  repl_pos.ini  requirements-dev.txt  requirements.txt  settings.py  setup.py  synch.ini  synch.yaml
.github/workflows/: ci.yml  pypi.yml  pytest.yml  test.yml
front/: babel.config.js  package-lock.json  package.json
front/src/: main.js
front/src/router/: index.js
front/src/scss/: styles.css  styles.scss
front/src/views/: Layout.vue
mysql2ch/: __init__.py  cli.py  common.py  config.py  consumer.py  convent.py  factory.py  main.py  pos.py  producer.py  reader.py  redis.py  replication.py  settings.py  writer.py
mysql2ch/broker/: __init__.py  kafka.py  redis.py
mysql2ch/brokers/: __init__.py  kafka.py  redis.py
mysql2ch/reader/: __init__.py  mysql.py  postgres.py
mysql2ch/replication/: clickhouse.py  consumer.py  etl.py  producer.py
mysql2ch/ui/: __init__.py  main.py
mysql2ch/ui/templates/: monitor.html
synch/: __init__.py  cli.py  common.py  convert.py  enums.py  exceptions.py  factory.py  redis.py  redis_mixin.py  settings.py
synch/broker/: __init__.py  kafka.py  redis.py
synch/reader/: __init__.py  mysql.py  postgres.py
synch/replication/: clickhouse.py  consumer.py  continuous.py  etl.py  producer.py
synch/writer/: __init__.py  collapsing_merge_tree.py  merge_tree.py  replacing_merge_tree.py  versioned_collapsing_merge_tree.py
tests/: config.json  docker-compose.yml  settings.py  synch.ini  synch.yaml  test_etl.py  test_mysql.py  test_mysqlparser.py  test_postgres.py  test_settings.py  test_sql_convent.py  test_writer.py  test_writer_mt.py
tests/reader/: test_postgres.py
