[tool.poetry]
name = "synch"
version = "0.6.2"
description = "Sync data from other DB to ClickHouse, current support postgres and mysql, and support full and increment ETL."
authors = ["long2ice <long2ice@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/long2ice/synch"
repository = "https://github.com/long2ice/synch.git"
documentation = "https://github.com/long2ice/synch"
keywords = ["MySQL", "ClickHouse", "Sync"]
packages = [
    { include = "synch" }
]
include = ["CHANGELOG.md", "LICENSE", "README.md", "pyproject.toml"]

[tool.poetry.dependencies]
python = "^3.8"
mysql-replication = {version = "*", optional = true}
clickhouse-driver = "*"
redis = "*"
mysqlclient = {version = "*", optional = true}
sentry-sdk = {version = "*", optional = true}
python-dateutil = "*"
sqlparse = "*"
kafka-python = {version = "*", optional = true}
psycopg2 = {version = "*", optional = true}
pyyaml = "*"
click = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"
isort = "*"
black = "^19.10b0"
pytest-xdist = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
synch = "synch.cli:cli"

[tool.poetry.extras]
mysql = ["mysqlclient", "mysql-replication"]
postgres = ["psycopg2"]
kafka = ["kafka-python"]
sentry = ["sentry-sdk"]