[tool.poetry]
authors = ["long2ice <long2ice@gmail.com>"]
description = "Sync data from other DB to ClickHouse, current support postgres and mysql, and support full and increment ETL."
documentation = "https://github.com/long2ice/synch"
homepage = "https://github.com/long2ice/synch"
include = ["CHANGELOG.md", "LICENSE", "README.md", "pyproject.toml"]
keywords = ["MySQL", "ClickHouse", "Sync"]
license = "Apache-2.0"
name = "synch"
packages = [
  {include = "synch"},
]
readme = "README.md"
repository = "https://github.com/long2ice/synch.git"
version = "0.6.3"

[tool.poetry.dependencies]
click = "*"
clickhouse-driver = "*"
kafka-python = {version = "*", optional = true}
mysql-replication = {version = "*", optional = true}
mysqlclient = {version = "*", optional = true}
psycopg2 = {version = "*", optional = true}
python = "^3.8"
python-dateutil = "*"
pyyaml = "*"
redis = "*"
sentry-sdk = {version = "*", optional = true}
sqlparse = "*"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "^19.10b0"
flake8 = "*"
isort = "*"
pytest = "*"
pytest-xdist = "*"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool.poetry.scripts]
synch = "synch.cli:cli"

[tool.poetry.extras]
all = ["mysqlclient", "mysql-replication", "psycopg2", "kafka-python", "sentry-sdk"]
kafka = ["kafka-python"]
mysql = ["mysqlclient", "mysql-replication"]
postgres = ["psycopg2"]
sentry = ["sentry-sdk"]
